{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 11,
  "lineage": "24225e1b-d29d-b409-e546-8304d9cfe83a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e83a3f628715ad8f",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-06ab67ead9be1e788",
            "domain": "vpc",
            "id": "eipalloc-0e83a3f628715ad8f",
            "instance": "i-07ab8540f317b124b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d38d1a2dd548c7c5",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-3-227-138-98.compute-1.amazonaws.com",
            "public_ip": "3.227.138.98",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:338748098982:instance/i-07ab8540f317b124b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07ab8540f317b124b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0d38d1a2dd548c7c5"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d38d1a2dd548c7c5",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_ip": "3.227.138.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0002bac1c62cd63e6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0878053992cd739d4",
            "tags": {
              "Name": "web-server"
            },
            "tags_all": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a0dd3226a7eebfd3"
            ]
          },
          "dependencies": [
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338748098982:internet-gateway/igw-09313f86335a1d712",
            "id": "igw-09313f86335a1d712",
            "owner_id": "338748098982",
            "vpc_id": "vpc-0311eacf71cef5bcb"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338748098982:network-interface/eni-0d38d1a2dd548c7c5",
            "attachment": [
              {
                "attachment_id": "eni-attach-084b3eb458a80c68d",
                "device_index": 0,
                "instance": "i-07ab8540f317b124b"
              }
            ],
            "id": "eni-0d38d1a2dd548c7c5",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:e6:52:e9:4c:d3",
            "owner_id": "338748098982",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0a0dd3226a7eebfd3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0878053992cd739d4"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338748098982:route-table/rtb-0907b9bddf5ae63cc",
            "id": "rtb-0907b9bddf5ae63cc",
            "owner_id": "338748098982",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09313f86335a1d712",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Prod"
            },
            "tags_all": {
              "Name": "Prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0311eacf71cef5bcb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e06cb85888e62f5",
            "route_table_id": "rtb-0907b9bddf5ae63cc",
            "subnet_id": "subnet-0878053992cd739d4"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.prod-route-table",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338748098982:security-group/sg-0a0dd3226a7eebfd3",
            "description": "Allow Web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0dd3226a7eebfd3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "338748098982",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0311eacf71cef5bcb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338748098982:subnet/subnet-0878053992cd739d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0878053992cd739d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "338748098982",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-subnet"
            },
            "tags_all": {
              "Name": "prod-subnet"
            },
            "vpc_id": "vpc-0311eacf71cef5bcb"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338748098982:vpc/vpc-0311eacf71cef5bcb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-084fe81363ad02bd6",
            "default_route_table_id": "rtb-0fb892cb8ab775443",
            "default_security_group_id": "sg-0f0d899c62e3c3735",
            "dhcp_options_id": "dopt-02630dda483fa4128",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0311eacf71cef5bcb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fb892cb8ab775443",
            "owner_id": "338748098982",
            "tags": {
              "Name": "production"
            },
            "tags_all": {
              "Name": "production"
            }
          }
        }
      ]
    }
  ]
}